--- a/src/app/main/estimate/esrimate/estimate.component.html
+++ b/src/app/main/estimate/esrimate/estimate.component.html
@@ -196,6 +196,12 @@
               </div>
             </form>
           </mat-tab>
+          <mat-tab label="ข้อมูลแผนการดำเนินโครงการ">
+
+          </mat-tab>
+          <mat-tab label="ข้อมูลเอกสารเสนอขอ">
+
+          </mat-tab>
         </mat-tab-group>
         <!--  -->
       </div>
