budget plan component

--- a/src/app/main/estimate/esrimate/estimate.component.html
+++ b/src/app/main/estimate/esrimate/estimate.component.html
@@ -197,7 +197,7 @@
             </form>
           </mat-tab>
           <mat-tab label="ข้อมูลแผนการดำเนินโครงการ">
-
+            <app-budget-plan></app-budget-plan>
           </mat-tab>
           <mat-tab label="ข้อมูลเอกสารเสนอขอ">
 
