--- a/src/app/main/estimate/esrimate/estimate.component.html
+++ b/src/app/main/estimate/esrimate/estimate.component.html
@@ -46,7 +46,7 @@
       <div class="content">
         <mat-tab-group fxFlex>
           <mat-tab label="ข้อมูลเสนอโครงการ">
-            <app-proposal-form (submitClick)="onsubmit($event)"></app-proposal-form>
+            <app-proposal-form></app-proposal-form>
             <!-- <form [formGroup]="selectForm" class="mt-20" >
               <div fxLayout="row">
                 <div
