--- a/src/app/main/proposal/list/proposalList.component.html
+++ b/src/app/main/proposal/list/proposalList.component.html
@@ -47,7 +47,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <app-prop-list></app-prop-list>
+        <app-prop-list [rows]="rows"></app-prop-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
