--- a/src/app/main/proposal/components/prop-list/prop-list.component.html
+++ b/src/app/main/proposal/components/prop-list/prop-list.component.html
@@ -4,40 +4,40 @@
       rowHeight="auto" [limit]="10" [rows]="rows">
       <ngx-datatable-column name="รหัสโครงการ" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.prop_id }}
+          {{ row._id }}
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column name="ชื่อโครงการ" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.prop_name }}
+          {{ row.name }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="กิจกรรมหลัก" [flexGrow]="2">
+      <ngx-datatable-column name="วัตถุประสงค์" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.main_activity }}
+          {{ row.objectives }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="ปีเริ่มต้น" [flexGrow]="2">
+      <ngx-datatable-column name="กลุ่มเป้าหมาย" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.startdate }}
+          {{ row.targetgroup }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="ปีสิ้นสุด" [flexGrow]="2">
+      <ngx-datatable-column name="ระยะเวลา" [flexGrow]="1.3">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.enddate }}
+          {{ row.timeline }}
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column name="ผู้รับผิดชอบ" [flexGrow]="2">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.responsible_person }}
+          {{ row.owner }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="สถานะ" [flexGrow]="1.5">
+      <ngx-datatable-column name="ผลผลิต" [flexGrow]="1.5">
         <ng-template ngx-datatable-cell-template let-row="row">
-          {{ row.prop_status }}
+          {{ row.output }}
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column [flexGrow]="0.6">
+      <ngx-datatable-column [flexGrow]="1">
         <ng-template ngx-datatable-cell-template>
           <button class="mat-icon-button" aria-label="More" [matMenuTriggerFor]="moreMenu"
             (click)="$event.stopPropagation()">
