--- a/src/app/main/estimate/components/proposal-form/proposal-form.component.scss
+++ b/src/app/main/estimate/components/proposal-form/proposal-form.component.scss
@@ -1,6 +1,8 @@
-// .margin-form {
-//   margin-left: 20px;
-//   margin-right: 16px;
-//   margin-bottom: 30px;
-//   height: 55px;
-// }
+.header-form {
+  margin-top: 25px;
+}
+.margin-form {
+  margin-left: 20px;
+  margin-right: 16px;
+  margin-bottom: 25px;
+}
